<resources>
    <string name="app_name">WowGuau</string>
    <string name="email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="password_min">contraseña</string>
    <string name="login">Ingresar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="fpassword"><u>Olvidé mi contraseña</u></string>
    <string name="caccount">Crear cuenta</string>
    <string name="welcome">Bienvenido, </string>
    <string name="bienvenida_registro_usuario">Bienvenido a WowGuau</string>

    <string name="search_walk">Buscar paseos</string>
    <string name="search_dog_walker">Buscar paseadores</string>
    <string name="track_your_puppy">Monitorea a tu consentido</string>
    <string name="update_puppy_info">Actualiza información de tu consentido</string>
    <string name="update_your_info">Actualiza tu información</string>
    <string name="caminata_en">Caminata en </string>
    <string name="duraci_n_aproximada">Duración aproximada:</string>
    <string name="mapa">mapa</string>
    <string name="responsable">Responsable:</string>
    <string name="caminatas_disponibles">Caminatas Disponibles</string>
    <string name="btnSolicitar">Solicitar</string>
    <string name="tituloSolicitudPaseador">¡Alguien esta solicitando un paseador!</string>
    <string name="pagar">Pagar</string>
    <string name="sabemos_que_son_parte_de_tu_familia">Sabemos que son parte de tu familia</string>
    <string name="selecciona_a_qui_n_quieres_monitorear">Selecciona a quién quieres monitorear</string>
    <string name="selecciona_a_qui_n_quieres_pasear">Selecciona a quién le quieres solicitar un paseo</string>
    <string name="selecciona_a_qui_n_quieres_actualizar">Selecciona a quién le vas a actualizar los datos</string>
    <string name="registro_soy_dueño">Soy dueño de mascota(s)</string>
    <string name="registro_soy_paseador">Soy paseador</string>
    <string name="actualizar_mis_datos">Actualizar mis datos</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="recuperar">Recuperar</string>
    <string name="qu_deseas_hacer">¿Qué deseas hacer?</string>
    <string name="registra_tus_datos">Registra tus datos</string>
    <string name="registra_a_tu_consentido">Registra a tu consentido</string>
    <string name="mis_consentidos">Mis consentidos</string>
    <string name="obligatorio">Campo obligatorio</string>
    <string name="direccion_erronea">Dirección no encontrada</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_menu_paseador">MenuPaseadorActivity</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_actualizar">Actualizar</string>
    <string name="menu_hitorial">Historial</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello in construction fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="log_out">Log out</string>
    <string name="menu_historial">Historial</string>

    <!-- Item paseador -->

    <string name="NombrePaseador">Nombre</string>
    <string name="ExperienciaPaseador">Experiencia</string>
    <string name="RatingPaseador">Rating</string>
    <string name="CiudadPaseador">Ciudad</string>
    <string name="DisponibilidadPaseador">Disponibilidad</string>
    <string name="FotoPaseador">Foto del paseador</string>

    <!-- Búsqueda paseador -->

    <string name="TituloBusquedaPaseadores">¿Quién va a pasear a mi perro?</string>
    <string name="botonFiltrar">Filtrar</string>
    <string name="botonCerrarSesion">Cerrar sesión</string>

    <!-- Perfil paseador -->

    <string name="CertificacionesPaseador">Certificaciones</string>
    <string name="VerCalificaciones">Ver calificaciones</string>
    <string name="DescripcionPaseador">Descripción</string>

    <!-- Calificaciones paseador -->

    <string name="Calificacion">Calificación</string>
    <string name="UsuarioCalificacion">Usuario que realizó calificación</string>
    <string name="Comentarios">Comentarios</string>

    <!-- LoginActivity -->

    <string name="Facebook">Ingresar con Facebook</string>
    <string name="Twitter">Ingresar con Twitter</string>
    <string name="Google">Ingresar con Google</string>
    <string name="LoginImagen">Login</string>
    <string name="facebook_app_id">2423075578019456</string>
    <string name="fb_login_protocol_scheme">fb2423075578019456</string>

    <!-- Signup owner -->

    <string name="NombreUsuario">Nombre</string>
    <string name="CedulaUsuario">Cedula</string>
    <string name="FechaNacimientoUsuario">Fecha de nacimiento (mm/dd/aa)</string>
    <string name="TelefonoUsuario">Teléfono</string>
    <string name="DireccionUsuario">Dirección</string>
    <string name="GeneroUsuario">Género</string>
    <string name="RegistroUsuario">Registrar</string>
    <string name="GeneroMasculino">Hombre</string>
    <string name="GeneroFemenino">Mujer</string>
    <string name="GeneroOtro">Otro</string>
    <string name="FotoUsuario">Foto usuario</string>
    <string name="CargarFotoUsuario">Cargar foto</string>

    <!-- Establecer objetivos -->

    <string name="titulo_establecer_objetivos">Establece un objetivo diario para tu consentido</string>
    <string name="objetivo_tiempo">Establecer por tiempo de actividad (min)</string>
    <string name="objetivo_distancia">Establecer por distancia recorrida (km)</string>
    <string name="boton_establecer_objetivo">Establecer objetivo</string>
    <string name="tiempo_obj">Tiempo (en minutos)</string>
    <string name="distancia_obj">Distancia (en km)</string>
    <string name="completitud_objetivo">Completitud</string>

    <!-- Solicitar paseo -->

    <string name="solicitar_paseo">Solicitar paseo</string>
    <string name="btn_direccion_casa">Desde dirección de mi casa</string>
    <string name="btn_direccion_aca">Desde ubicación actual</string>
    <string name="btn_desde_donde">No has seleccionado ubicación</string>
    <string name="duracion_solicitud_paseo">Tiempo solicitado para paseo (min)</string>
    <string name="distancia_solicitud_paseo">Distancia solicitada para paseo (km)</string>
    <string name="monedas_ofrecidas_paseo">Monedas requeridas para el paseo</string>
    <string name="title_activity_paseo_mapa">Map</string>

    <string name="hint_mensaje">Escribir mensaje&#8230;</string>
    <string name="error_mensaje_vacio">Porfavor escribe un mensaje</string>
    <string name="error_enviar_mensaje">Error al enviar mensaje</string>
    <string name="ejercicios_de_tu_consentido">Ejercicios de tu consentido</string>
</resources>
