<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.wow_guau.views.PantallaInicioPaseadorFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_pantalla_inicio_paseador" />

    <fragment
        android:id="@+id/nav_actualizar"
        android:name="com.example.wow_guau.views.ActualizarPaseadorFragment"
        android:label="@string/menu_actualizar"
        tools:layout="@layout/fragment_actualizar_paseador" />

    <fragment
        android:id="@+id/nav_historial"
        android:name="com.example.wow_guau.views.HistorialPaseadorFragment"
        android:label="@string/menu_hitorial"
        tools:layout="@layout/fragment_historial_paseador" />

</navigation>