<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_button"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivItemPaseador"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/FotoPaseador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cltemPaseador"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_man_profile" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cltemPaseador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ivItemPaseador"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNombreItemPaseador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NombrePaseador"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvExperienciaItemPaseador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ExperienciaPaseador"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <TextView
                android:id="@+id/tvRatingItemPaseador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RatingPaseador"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <TextView
                android:id="@+id/tvCiudadItemPaseador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CiudadPaseador"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <TextView
                android:id="@+id/tvDisponibilidadItemPaseador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DisponibilidadPaseador"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>