<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ActivityEstablecerObjetivo">

    <TextView
        android:id="@+id/tv_titulo_establecer_obj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/titulo_establecer_objetivos"
        android:textColor="@color/browser_actions_text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_establecer_tiempo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_establecer_tiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objetivo_tiempo"
        android:textColor="@color/browser_actions_text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_establecer_tiempo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_establecer_obj" />

    <EditText
        android:id="@+id/et_establecer_tiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tiempo_obj"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/tv_establecer_distancia"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_establecer_tiempo"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_establecer_distancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objetivo_distancia"
        android:textColor="@color/browser_actions_text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_establecer_distancia"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_establecer_tiempo" />

    <EditText
        android:id="@+id/et_establecer_distancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/distancia_obj"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btn_establecer_objetivo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_establecer_distancia"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_establecer_objetivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_establecer_objetivo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_establecer_distancia" />

</androidx.constraintlayout.widget.ConstraintLayout>