<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".views.ActivitySolicitarPaseo">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/solicitar_paseo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textView4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duracion_solicitud_paseo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintBottom_toTopOf="@id/et_duracion_solicitud"/>

    <EditText
        android:id="@+id/et_duracion_solicitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/duracion_solicitud_paseo"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/textView6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monedas_ofrecidas_paseo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_monedas_ofrecidas"
        app:layout_constraintTop_toBottomOf="@id/et_duracion_solicitud"/>

    <EditText
        android:id="@+id/et_monedas_ofrecidas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/monedas_ofrecidas_paseo"
        android:inputType="number"
        android:textColor="@color/browser_actions_text_color"
        app:layout_constraintBottom_toTopOf="@id/btn_desde_direccion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_desde_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_direccion_casa"
        app:layout_constraintBottom_toTopOf="@id/btn_desde_aca"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_monedas_ofrecidas" />

    <Button
        android:id="@+id/btn_desde_aca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_direccion_aca"
        app:layout_constraintBottom_toTopOf="@id/tv_desde_donde"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_desde_direccion" />

    <TextView
        android:id="@+id/tv_desde_donde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/btn_desde_donde"
        app:layout_constraintBottom_toTopOf="@id/btn_solicitar_paseo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_desde_aca" />

    <Button
        android:id="@+id/btn_solicitar_paseo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solicitar_paseo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desde_donde" />

</androidx.constraintlayout.widget.ConstraintLayout>